1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Button.m, ButtonPanel.m, Canvas.m, CanvasAbstractItem.m,
	CanvasItem.m, CheckButton.m, Circle.m, ClassDisplayHideButton.m,
	ClassDisplayLabel.m, Colormap.m, CompleteProbeDisplayLabel.m,
	CompositeItem.m, Entry.m, Form.m, Frame.m, Graph.m, Histogram.m,
	InputWidget.m, Label.m, Line.m, LinkItem.m, MessageProbeEntry.m,
	NodeItem.m, OvalNodeItem.m, Pixmap.m, ProbeCanvas.m, Raster.m,
	Rectangle.m, RectangleNodeItem.m, SimpleProbeDisplayHideButton.m,
	SuperButton.m, TextItem.m, VarProbeEntry.m, VarProbeLabel.m,
	Widget.m, WindowGeometryRecord.m, ZoomRaster.m:  Add phase tags.
 
	* CanvasAbstractItem.m, NodeItem.m, WindowGeometryRecord.m,
	ZoomRaster.m: Reorder methods for above.

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* OvalNodeItem.h, RectangleNodeItem.h: Declare createItem.
	
	* NodeItem.m ([NodeItem -moveX:Y:]): Get canvasName and use it
	instead of calling getWidgetName twice.

	* CanvasAbstractItem.h (CanvasAbstractItem): Add item as an instance
	variable.

	* CanvasItem.h (CanvasItem): Remove item as an instance variable.

	* CanvasItem.[hm]: Don't declare createItem.

	* Circle.[hm]:  Remove reportClick and reportMoveX:Y:.

	* NodeItem.h: Remove item.

	* NodeItem.m (createButton3Binding, createButton1Binding,
	createButton1MotionBinding): New static functions.
	([NodeItem -createBindings]): Use them.

1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CanvasAbstractItem.[hm]: New files.

	* MessageProbeEntry.[hm]: Rename resultIdFlag to idFlag (and setter).

	* Makefile (OBJECTS, HEADERS): Add CanvasAbstractItem.[oh].
	(CanvasAbstractItem.o): Add.

	* CanvasItem.[hm], CompositeItem.[hm]: Superclass is now
	CanvasAbstractItem.  Remove canvas, target, clickSel, moveSel, and
	postMoveSel instance variables and accessors.  Don't
	declare/define createEnd or clicked.

	* InputWidget.[hm]: linkVariable{Int,Double,Boolean}: now take