@@ -1,3 +1,7 @@
+1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* ArchivedGeometryWidget.m: Add phase tags.
+
 1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Button.m, ButtonPanel.m, Canvas.m, CanvasAbstractItem.m,
